--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
@@ -45,7 +45,10 @@
 
         <service
             android:name=".ActivityRecognitionService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".DrawerActivity"></activity>
     </application>
 
 </manifest>
